Draft of Comp page done

--- a/comparison.html
+++ b/comparison.html
@@ -61,11 +61,51 @@
           <div class="col-md-12">  
             <hr class="style1">
           </div>
+          <p class="p1">  
+            Click any plot to get an in-depth analysis.
+          </p>
         </div>
-      <p class="p1">  
-        Click any plot to get an in-depth analysis.
-      </p>
-    </div>
+        <!-- New row for first sets of vis 2x2 in lg and 1x4 in sm -->
+        <div class="row"> 
+          <!-- Start 2 columns for temp and humidity -->
+          <div class="col-md-6 col-sm-12">
+            <div class="clearfix">
+              <header class="header"> 
+                <h3>vs. Max Temperature</h3>
+              </header>
+                <img src="assets/images/Fig1.png" class="img_vis_comp" alt="Lat x Max Temp">   
+            </div> <!-- clearfix -->
+          </div> <!-- col-md-6 col-sm-12 -->
+          <div class="col-md-6 col-sm-12">
+            <div class="clearfix">
+              <header class="header"> 
+                <h3>vs. Humidity</h3>
+              </header>
+                <img src="assets/images/Fig2.png" class="img_vis_comp" alt="Lat x Humidity">  
+            </div> <!-- clearfix --> 
+          </div> <!-- col-md-6 col-sm-12 -->
+        
+        <!-- New row for second set of vis 2x2 in lg and 1x4 in sm -->
+        <div class="row"> 
+          <!-- Start 2 columns for temp and humidity -->
+          <div class="col-md-6 col-sm-12">
+            <div class="clearfix">
+              <header class="header"> 
+                <h3>vs. Cloudiness</h3>
+              </header>
+                <img src="assets/images/Fig3.png" class="img_vis_comp" alt="Lat x Cloudiness">   
+            </div> <!-- clearfix -->
+          </div> <!-- col-md-6 col-sm-12 -->
+          <div class="col-md-6 col-sm-12">
+            <div class="clearfix">
+              <header class="header"> 
+                <h3>vs. Wind Speed</h3>
+              </header>
+                <img src="assets/images/Fig4.png" class="img_vis_comp" alt="Lat x Wind Speed">  
+            </div>  <!-- clearfix -->
+          </div> <!-- col-md-6 col-sm-12 -->
+        </div> <!-- row -->
+    </div> <!-- End of container -->
     <!-- End of container -->
 
     <!-- Bootstrap CDN -->
