--- a/landing_page.html
+++ b/landing_page.html
@@ -62,13 +62,13 @@
           <div class="clearfix">
             <img src="assets/images/Fig1.png" class="col-md-6 rounded float-sm-start" alt="Lat x Max Temp">    
           <p class="p1"> 
-            The purpose of this project was to analyze how weather changes as 
+            COPIED FROM PROMPT::::::The purpose of this project was to analyze how weather changes as 
             you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
           </p>
           <p class="p1">
             After assembling the dataset, we used Matplotlib to plot various 
             aspects of the weather vs. latitude. Factors we looked at included:
-            temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.
+            temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed. CHANGE BEFORE TURNING IT IN!!!!!!!!!!!!!!!!!!!!!!!!!!!
           </p>
         </div>
         </article> <!-- article -->
