All boxes complete

--- a/data.html
+++ b/data.html
@@ -50,25 +50,26 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-    <div class="container">
-
+    <div class="container-fluid main_container"> 
       <div class="row">
-        <div class="col-md-6">
-          <div class="clearfix">
-          <header class="header"> 
-            <h1>Data</h1>
-          </header>
-        </div>
-      </div>
-        <div class="row">
-          <div class="col-md-12">  
-            <hr class="style1">
+        <div class="col comp_box">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="clearfix">
+              <header class="header"> 
+                <h1>Data</h1>
+              </header>
+            </div>
           </div>
-        </div> <!-- row for whole hr-->
-      <p class="p1">  
-        The following table includes all of the data used for plotting for this project.
-      </p>
-    </div> <!-- ends container for header-->
+          <div class="row">
+            <div class="col-md-12">  
+              <hr class="style1">
+            </div>
+          </div> <!-- row for whole hr-->
+        <p class="p1">  
+          The following table includes all of the data used for plotting for this project.
+        </p>
+      </div> <!-- ends row for header-->
     <!-- start of table -->
     <div class="table-responsive-md">
         <table class="table table-striped">
@@ -6761,7 +6762,11 @@
             </tr>
           </tbody>
       </table>
-    </div> 
+      </div> <!-- row -->
+      </div> <!-- summary_box -->
+    </div> <!-- initial row -->
+  </div>  <!-- End of container -->
+  <!-- End of container -->
     <!-- End of table -->
 
     <!-- Bootstrap CDN -->
