Update landing_page and readme

--- a/landing_page.html
+++ b/landing_page.html
@@ -62,13 +62,10 @@
             <div class="clearfix">
               <img src="assets/images/Fig1.png" class="col-md-6 float-md-start" alt="Lat x Max Temp">    
             <p class="p1"> 
-              COPIED FROM PROMPT::::::The purpose of this project was to analyze how weather changes as 
-              you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.
+              The purpose behind this project was to analyze how weather differs across cities at different latitudes around the globe. First, I generated a random list of cities using the <em>citipy</em> module in python. I tried to make sure that these cities were as well distributed across the globe as possible. Next, I used the OpenWeatherMap API to get the necessary data for as many cities as possible, which ended up being 555 cities.
             </p>
             <p class="p1">
-              After assembling the dataset, we used Matplotlib to plot various 
-              aspects of the weather vs. latitude. Factors we looked at included:
-              temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed. CHANGE BEFORE TURNING IT IN!!!!!!!!!!!!!!!!!!!!!!!!!!!
+             After some minor cleaning of the data, I used <em>seaborn</em>, <em>pandas</em>, and <em>matplotlib</em> to plot many of the relationships between latitude and different elements of weather from the API call. These relationships include: <strong>latitude vs. temperature, latitude vs. humidity,latitude vs. cloudiness, and latitude vs. wind speed</strong>. All of these plots, along with my analysis, comparisions, and the clean data set are contained in this site.   
             </p>
           </div>
           </article> <!-- article -->
