Final Commit, turn in

--- a/data.html
+++ b/data.html
@@ -71,7 +71,7 @@
         </p>
       </div> <!-- ends row for header-->
     <!-- start of table -->
-    <div class="table-responsive-md">
+    <div class="table-responsive-sm">
         <table class="table table-striped">
           <thead> 
             <tr style="text-align: left;">
