--- a/landing_page.html
+++ b/landing_page.html
@@ -60,7 +60,7 @@
           </div> <!-- clearfix -->
           <article class="col">
             <div class="clearfix">
-              <img src="assets/images/Fig1.png" class="col-md-6 float-md-start" alt="Lat x Max Temp">    
+              <img src="assets/images/Fig1.png" class="img-fluid float-md-start" alt="Lat x Max Temp">    
             <p class="p1"> 
               The purpose behind this project was to analyze how weather differs across cities at different latitudes around the globe. First, I generated a random list of cities using the <em>citipy</em> module in python. I tried to make sure that these cities were as well distributed across the globe as possible. Next, I used the OpenWeatherMap API to get the necessary data for as many cities as possible, which ended up being 555 cities.
             </p>
@@ -75,7 +75,7 @@
       <!-- Start of Visualizations imageNav Area -->
       <div class="col-md-5 col-sm-12" 
           <!-- Start of Visualizations imageNav Area -->
-            <div class="summary_box">
+            <div class="vis_box">
               <!-- Add vis header -->
                 <header class="header"><h1>Visualizations</h1></header>
                 <hr class="style1">
