--- a/visualizations/cloudiness.html
+++ b/visualizations/cloudiness.html
@@ -50,7 +50,7 @@
     <div class="container-fluid main_container">
       <div class="row"> 
         <div class="col-md-7 col-sm-12">
-          <div class="summary_box">
+          <div class="vis_box">
           <div class="clearfix">
           <header class="header"> 
             <h1>Cloudiness</h1>
@@ -59,22 +59,24 @@
           </div>
           <article class="col">
             <div class="clearfix">
-              <img src="../assets/images/Fig3.png" alt="Lat x Cloudiness">    
+              <img src="../assets/images/Fig3.png" class="img-fluid col-md-12" alt="Lat x Cloudiness">    
             <p class="p1"> 
-              There is no real relationship between latitude and cloudiness. This plot really serves as a true comparison for the relationship between latitude and temperature, to show that there are some aspects of weather that are not dependent on geography and that happen all across the globe at nearly the same rates. This plot does show that there is a...FINISH BEFORE TURNING IN!!!!!!!!!!!!!!!!!!***************************
+              There is no real relationship between latitude and cloudiness. Again, this plot further serves as a comparison for the relationship between latitude and temperature, to show that there are some aspects of weather that are not dependent on geography and that happen all across the globe at nearly the same rates. It is interesting to see that a lot of cities have either 100% or 0% cloudiness.
             </p>
-          </div>
+            </div>
           </article> <!-- article -->
         </div> <!-- summary_box -->
       </div> <!-- col-md-7 col-sm-12 -->
       
-        <!-- Start of Visualizations imageNav Area -->
+        <!-- Start of Visualizations imageNav Area --> 
      <div class="col-md-5 col-sm-12" 
      <!-- Start of Visualizations imageNav Area -->
-       <div class="summary_box">
+       <div class="summary_box clearfix">
          <!-- Add vis header -->
+          <div class="clearfix">
            <header class="header"><h1>Visualizations</h1></header>
            <hr class="style1">
+          </div>
          <!-- Add images in 2x2 grid -->
          <div class="row"> <!-- row to start grid -->
            <div class="col-md-6 col-sm-12">
