--- a/visualizations/humidity.html
+++ b/visualizations/humidity.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> 
 
     <title>Humidity Page</title>
 
@@ -60,9 +60,9 @@
           </div>
           <article class="col">
             <div class="clearfix">
-              <img src="../assets/images/Fig2.png" alt="Lat x Humidity">  
+              <img src="../assets/images/Fig2.png" class="img-fluid col-md-12" alt="Lat x Humidity">  
             <p class="p1"> 
-              There is a not any real relationship between latitude and humidity. This plot really serves as a true comparison for the relationship between latitude and temperature, to show that there are some aspects of weather that are not dependent on geography and that happen all across the globe at nearly the same rates. This plot does show that there is a...FINISH BEFORE TURNING IN!!!!!!!!!!!!!!!!!!***************************
+              There is a not any real relationship between latitude and humidity. This plot really serves as a true comparison for the relationship between latitude and temperature, to show that there are some aspects of weather that are not dependent on geography and that happen all across the globe at nearly the same rates. This plot does show that there are not a lot of areas of very low humidity that directly vary with latitude. Most arid places are inland and near the equator but not necessarily captured by this random dataset of cities.
             </p>
           </div>
           </article> <!-- article -->
@@ -72,10 +72,12 @@
     <!-- Start of Visualizations imageNav Area -->
      <div class="col-md-5 col-sm-12" 
      <!-- Start of Visualizations imageNav Area -->
-       <div class="summary_box">
+       <div class="vis_box">
          <!-- Add vis header -->
-           <header class="header"><h1>Visualizations</h1></header>
-           <hr class="style1">
+         <div class="clearfix">
+          <header class="header"><h1>Visualizations</h1></header>
+          <hr class="style1">
+         </div>
          <!-- Add images in 2x2 grid -->
          <div class="row"> <!-- row to start grid -->
            <div class="col-md-6 col-sm-12">
