--- a/visualizations/temp.html
+++ b/visualizations/temp.html
@@ -59,9 +59,9 @@
             </div>
             <article class="col">
               <div class="clearfix">
-                <img src="../assets/images/Fig1.png" alt="Lat x Max Temp">
+                <img src="../assets/images/Fig1.png" class="img-fluid col-md-12" alt="Lat x Max Temp">  
                 <p class="p1"> 
-                There is a clear relationship between latitude and temperature. This plot  shows that ..FINISH BEFORE TURNING IN!!!!!!!!!!!!!!!!!!***************************
+                There is a clear relationship between latitude and temperature. This plot shows that temperatures are at the highest at the equator and then drop as latitude increases. Temperatures are much lower in the northern hemisphere in this dataset (latitude that is positive). That is because it is winter in the northern hemisphere at this time of year and it is summer in the southern hemisphere. It is probably also due to there being more land mass in the northern hemisphere and the random draw of cities that preceded the API call was a bit biased to the northern hemisphere. 
                 </p>
               </div>
           </article> <!-- article -->
@@ -71,10 +71,12 @@
      <!-- Start of Visualizations imageNav Area -->
      <div class="col-md-5 col-sm-12" 
      <!-- Start of Visualizations imageNav Area -->
-       <div class="summary_box">
+       <div class="vis_box">
          <!-- Add vis header -->
-           <header class="header"><h1>Visualizations</h1></header>
-           <hr class="style1">
+         <div class="clearfix">
+          <header class="header"><h1>Visualizations</h1></header>
+          <hr class="style1">
+         </div>
          <!-- Add images in 2x2 grid -->
          <div class="row"> <!-- row to start grid -->
            <div class="col-md-6 col-sm-12">
