--- a/visualizations/wind.html
+++ b/visualizations/wind.html
@@ -50,7 +50,7 @@
     <div class="container-fluid main_container">
       <div class="row"> 
         <div class="col-md-7 col-sm-12">
-          <div class="summary_box">
+          <div class="vis_box">
           <div class="clearfix">
             <header class="header"> 
               <h1>Wind Speed</h1>
@@ -59,9 +59,9 @@
           </div>
           <article class="col">
             <div class="clearfix">
-              <img src="../assets/images/Fig4.png" alt="Lat x Wind Speed">            
+              <img src="../assets/images/Fig4.png" class="img-fluid col-md-12" alt="Lat x Wind Speed">            
               <p class="p1"> 
-                There is a no clear relationship between latitude and wind speed. This plot  shows that ..FINISH BEFORE TURNING IN!!!!!!!!!!!!!!!!!!***************************
+                Again, there is a no clear relationship between latitude and wind speed. This plot further serves as a comparison for the relationship between latitude and temperature, to show that there are some aspects of weather that are not dependent on geography and that happen all across the globe at nearly the same rates. It is interesting to see that not a lot of cities have wind speeds above 10 m/s (just over 22 mph) in this dataset. 
               </p>
             </div>
           </article> <!-- article -->
@@ -69,12 +69,14 @@
       </div> <!-- col-md-7 col-sm-12 -->
       
         <!-- Start of Visualizations imageNav Area -->
-     <div class="col-md-5 col-sm-12" 
+     <div class="col-md-5 col-sm-12"  
      <!-- Start of Visualizations imageNav Area -->
        <div class="summary_box">
          <!-- Add vis header -->
+         <div class="clearfix">
            <header class="header"><h1>Visualizations</h1></header>
            <hr class="style1">
+          </div>
          <!-- Add images in 2x2 grid -->
          <div class="row"> <!-- row to start grid -->
            <div class="col-md-6 col-sm-12">
