Now final commit, fixed some typos

--- a/landing_page.html
+++ b/landing_page.html
@@ -65,7 +65,7 @@
               The purpose behind this project was to analyze how weather differs across cities at different latitudes around the globe. First, I generated a random list of cities using the <em>citipy</em> module in python. I tried to make sure that these cities were as well distributed across the globe as possible. Next, I used the OpenWeatherMap API to get the necessary data for as many cities as possible, which ended up being 555 cities.
             </p>
             <p class="p1">
-             After some minor cleaning of the data, I used <em>seaborn</em>, <em>pandas</em>, and <em>matplotlib</em> to plot many of the relationships between latitude and different elements of weather from the API call. These relationships include: <strong>latitude vs. temperature, latitude vs. humidity,latitude vs. cloudiness, and latitude vs. wind speed</strong>. All of these plots, along with my analysis, comparisions, and the clean data set are contained in this site.   
+             After some minor cleaning of the data, I used <em>seaborn</em>, <em>pandas</em>, and <em>matplotlib</em> to plot many of the relationships between latitude and different elements of weather from the API call. These relationships include: <strong>latitude vs. max temperature, latitude vs. humidity, latitude vs. cloudiness, and latitude vs. wind speed</strong>. All of these plots, along with my descriptive analysis, comparisions, and the full data set are contained in this site.
             </p>
           </div>
           </article> <!-- article -->
