--- a/visualizations/temp.html
+++ b/visualizations/temp.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Temperature Page</title>
+    <title>Max Temperature Page</title>
 
     <!-- Boostrap Stylesheet -->
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css" media="screen">
@@ -53,7 +53,7 @@
           <div class="summary_box">
             <div class="clearfix">
               <header class="header"> 
-                <h1>Temperature</h1>
+                <h1>Max Temperature</h1>
               </header>
               <hr class="style1">
             </div>
